--- a/1. Cloud Concepts.md
+++ b/1. Cloud Concepts.md
@@ -1,7 +1,7 @@
- What is Amazon Web Services?
-  The Largest Cloud Computing Service started in 2002
+ # What is Amazon Web Services?
+   The Largest Cloud Computing Service started in 2002
 
- What is cloud computing?
+ * What is cloud computing?
   cloud computing is the delivery of computing services—including servers, storage, databases, networking, software, analytics, and intelligence—over the Internet 
 
 Started With:
@@ -10,7 +10,7 @@ Started With:
    Relational database Service- Host a relational database my SQL
    Virtual Private Cloud Service- create a isolated network in AWS
  
-AWS Regions and Availability Zones
+* AWS Regions and Availability Zones
 AWS has regions across the world that can be used to host resources.
      	They keep expanond by adding more data centers across the world.
      	What could influence your decision as to where you host your resources.
@@ -27,7 +27,7 @@ AWS Regions and Availability Zones
 			This breakdown is to increase resilience if on availability zone goes down 
 			Your site will still be up
 
-AWS Support Plans: Developer -  Business  - Enterprise
+* AWS Support Plans: Developer -  Business  - Enterprise
 
 	Different features like varying response time to outages
 	With Enterprise Support plan you get an account manager
