--- a/2. AWS Core Services- Part1.md
+++ b/2. AWS Core Services- Part1.md
@@ -1,13 +1,44 @@
-What are we going to cover:
+# What are we going to cover:{
 
-Simple Storage Service -  storage for the Internet. It is designed to make web-scale computing easier for developers.
+* Simple Storage Service -  storage for the Internet. It is designed to make web-scale computing easier for developers.
 
-Amazon Glacier - are a secure, durable, and extremely low-cost Amazon S3 cloud storage classes for data archiving and long-term backup.
+* Amazon Glacier - are a secure, durable, and extremely low-cost Amazon S3 cloud storage classes for data archiving and long-term backup.
 
-Virtual Private Cloud (VPC) -  is a service that lets you launch AWS resources in a logically isolated virtual network that you define.
+* Virtual Private Cloud (VPC) -  is a service that lets you launch AWS resources in a logically isolated virtual network that you define.
 
-Elastic Compute Cloud - is a web service that provides secure, resizable compute capacity in the cloud.
+* Elastic Compute Cloud - is a web service that provides secure, resizable compute capacity in the cloud.
 
-Elastic Block Storage - is a web service that provides secure, resizable compute capacity in the cloud.
+* Elastic Block Storage - is a web service that provides secure, resizable compute capacity in the cloud.
 
-Costing Aspects - an easy-to-use interface that lets you visualize, understand, and manage your AWS costs and usage over time.
+* Costing Aspects - an easy-to-use interface that lets you visualize, understand, and manage your AWS costs and usage over time.}
+
+
+# AWS SIMPLE STORAGE SERVICE :{
+
+An example of a Amazon Simple Storage Service use case is say you have an application that allows users to upload photos you can use the AWS Simple Storage Service to store those photos
+	
+Features of AWS Simple Storage Service:
+
+- Scales Automatically 
+- Practically give you an unlimited amount of storage
+- Highly reliable
+- Copies of object are made in different locations
+- Versoning:  have versioning in place for changes to objects.
+- S4 bucket behaving as a static website.
+- Cross Region Replication: This is when you want to ensure objects are available in another region
+
+	* Storage Classes:
+
+* Standard Storage Class: This is the  default class. This is used if objects in the bucket are accessed frequently
+
+* Reduced Redundancy Storage Class: Designed to store non-critical data. If you want to lower cost for storage, but dont mind reduced SLA.
+
+* STANDARD_IA and ONEZONE-IA:  This for infrequently accessed objects.
+
+* GLACIER and DEEP_ARCHIVE: Used for data archival. Storage at much lower cost. 
+
+            How Does It Work:
+                                    |===== Object (img, ect)
+            Simple Storage Service ====>  Bucket   <========= Object
+                                    |===== Object
+    }
