--- a/0 .Test Breakdown.MD
+++ b/0 .Test Breakdown.MD
@@ -1,31 +1,36 @@
-# General Test Breakdown:
+# General Test Breakdown:{
 
 Domain 1: Cloud Concepts 26%
 Domain 2: Security and Compliance 25%
 Domain 3: Technology 33%   (MOST QUESTONS)
 Domain 4: Billing and Pricing 16% (LEAST QUESTIONS)
 TOTAL 100%
- 
-Domain 1: Cloud Concepts
+}
+
+* Domain 1: Cloud Concepts{
 1.1 Define the AWS Cloud and its value proposition
 1.2 Identify aspects of AWS Cloud economics
 1.3 List the different cloud architecture design principles
+}
 
-Domain 2: Security and Compliance
+* Domain 2: Security and Compliance {
 2.1 Define the AWS shared responsibility model
 2.2 Define AWS Cloud security and compliance concepts
 2.3 Identify AWS access management capabilities
 2.4 Identify resources for security support
+}
 
-Domain 3: Technology  (MOST QUESTONS)
+* Domain 3: Technology  (MOST QUESTONS){
 3.1 Define methods of deploying and operating in the AWS Cloud
 3.2 Define the AWS global infrastructure
 3.3 Identify the core AWS services
 3.4 Identify resources for technology support
+}
 
-Domain 4: Billing and Pricing  (LEAST QUESTIONS)
+* Domain 4: Billing and Pricing  (LEAST QUESTIONS){
 4.1 Compare and contrast the various pricing models for AWS
 4.2 Recognize the various account structures in relation to AWS billing and pricing
 4.3 Identify resources available for billing support
+}
 
 SOURCE :  https://aws.amazon.com/certification/certified-cloud-practitioner/
