--- a/2. AWS Core Services- Part1.md
+++ b/2. AWS Core Services- Part1.md
@@ -20,7 +20,7 @@ An example of a Amazon Simple Storage Service use case is say you have an applic
 Features of AWS Simple Storage Service:
 
 - Scales Automatically 
-- Practically give you an unlimited amount of storage
+- Prac tically give you an unlimited amount of storage
 - Highly reliable
 - Copies of object are made in different locations
 - Versoning:  have versioning in place for changes to objects.
@@ -42,3 +42,25 @@ Features of AWS Simple Storage Service:
             Simple Storage Service ====>  Bucket   <========= Object
                                     |===== Object
     }
+
+    # AWS AMAZON GLACIER: {
+
+* Use case is that Amazon Glacier is good for storing data for longer periods of time
+    - Used for cold or archive storage 
+    - Much cheaper storage option
+
+* How does it work?
+    - In AWS Console you create a vault to hold objects
+    - In order to upload an object you need to use the AWS CLI or AWS SDK
+    - OR you can use the Lifecycle  management feature in S3
+
+
+		* EXAMPLE OF LIFECYCLE
+
+- SIMPLE STORAGE SERVICE ===(1 WEEK OLD OBJECT)===> AMAZON GLACIER 
+
+    - In order to retrieve an object you have to submit a job request.
+    - With the standard retrieval, it could take 3-5 hours to download an object.
+    - It's cheaper but takes way longer to move around
+You also have expedited retrieval at a higher cost to retrieve an object within a matter of minutes
+} 
