# AWS VIRTUAL PRIVATE CLOUD guide added

--- a/2. AWS Core Services- Part1.md
+++ b/2. AWS Core Services- Part1.md
@@ -64,3 +64,35 @@ Features of AWS Simple Storage Service:
     - It's cheaper but takes way longer to move around
 You also have expedited retrieval at a higher cost to retrieve an object within a matter of minutes
 } 
+
+
+# AWS VIRTUAL PRIVATE CLOUD {
+
+Allows you to have an isolated virtual network dedicated to your AWS account
+Its is isolated from other virtual networks
+You can launch resources such as EC2(Virtual Servers)
+
+* How does it work:
+    - In AWS, you can define a Virtual Private Cloud.
+    - The VPX will be allocated a CIDR block(eg.10.0.0/16)
+    - You can have multiple VPC’s defined in AWS
+    - For example for a different branches of a company or different personal projects
+    - When you create an AWS account, you get a default VPC created per region.
+    In your VPC you can define subnets
+    - The subnet will be assigned a CIDR block which is a subnet of the CIDR block of the VPC.
+
+    # IMPORTANT!                     
+    (If you don't come from a networking background IT IS NOT REQUIRED TO UNDERSTAND NETWORKING FULLY for the Cloud Practitioner Exam just understand the basics. The VPC is your private virtual network on AWS)
+
+		|-----VPC-------------|
+		|	|----VPCS-------| |
+		|	|               | |
+		|	|      (EC2)    | | 
+		|	|               | |
+		|	|---------------| |
+        |---------------------|
+
+VPC = VIRTUAL PRIVATE CLOUD
+VPCS = VIRTUAL PRIVATE CLOUD SUBNET
+EC2 =  (running inside of the VPC’s specif)
+}
