# AWS ELASTIC COMPUTE CLOUD{ notes

--- a/2. AWS Core Services- Part1.md
+++ b/2. AWS Core Services- Part1.md
@@ -96,3 +96,37 @@ VPC = VIRTUAL PRIVATE CLOUD
 VPCS = VIRTUAL PRIVATE CLOUD SUBNET
 EC2 =  (running inside of the VPC’s specif)
 }
+
+# AWS ELASTIC COMPUTE CLOUD{
+
+Amazon Elastic Compute Cloud (Amazon EC2) is a web service that provides secure, resizable compute capacity in the cloud. It is designed to make web-scale cloud computing easier for developers.
+	
+
+* Introduction
+	
+    - When you start an AWS Elastic Compute Cloud you have to define The Amazon Machine Image or (AMI) which is basically what operating system you’re using (linux, windows..)
+
+    - You also have to define what is the instance type which is basically defining what is the CPU, Memory ect.
+
+    - You also have to define what is the VPC the EC2 will be located in
+
+    - You the can specify the security groups which is essentially a firewall controlling the flow of traffic into and out of your virtual server
+
+    - You can then define volumes (Storage for the server)
+
+    - You can create tags for organization
+
+* Features
+
+    - There are different pricing models for EC2.
+
+    - The most basic one is the On-demand option. 
+
+    - With the On-demand option, you can create and terminate instance at any point in time
+
+    - You can host different types of workloads on an EC2 instance.
+
+    - You can also monitor you instances using AWS CLOUDWATCH
+
+    - You can choose different types based on the type of workload you want to host on the EC2 instance such as Compute Optimized Memory Optimized
+}
