--- a/2. AWS Core Services- Part1.md
+++ b/2. AWS Core Services- Part1.md
@@ -79,7 +79,7 @@ You can launch resources such as EC2(Virtual Servers)
     - For example for a different branches of a company or different personal projects
     - When you create an AWS account, you get a default VPC created per region.
     In your VPC you can define subnets
-    - The subnet will be assigned a CIDR block which is a subnet of the CIDR block of the VPC.
+    - The subnet will be assigned a CIDR block which is a subnet of the CIDr block of the VPC.
 
     # IMPORTANT!                     
     (If you don't come from a networking background IT IS NOT REQUIRED TO UNDERSTAND NETWORKING FULLY for the Cloud Practitioner Exam just understand the basics. The VPC is your private virtual network on AWS)
