--- a/2. AWS Core Services- Part1.md
+++ b/2. AWS Core Services- Part1.md
@@ -2,7 +2,7 @@
 
 * Simple Storage Service - storage for the Internet. It is designed to make web-scale computing easier for developers.
 
-* Amazon Glacier - are a secure, durable, and extremely low-cost Amazon S3 cloud storage classes for data archiving and long-term backup.
+* Amazon Glacier - is a secure, durable, and extremely low-cost Amazon S3 cloud storage classes for data archiving and long-term backup.
 
 * Virtual Private Cloud (VPC) -  is a service that lets you launch AWS resources in a logically isolated virtual network that you define.
 
