# What Is The Well Architected Framework

--- a/1. Cloud Concepts.md
+++ b/1. Cloud Concepts.md
@@ -36,4 +36,31 @@ AWS has regions across the world that can be used to host resources.
 Price is massively different 
 }
 
+# What Is The Well Architected Framework
+{
+* After designing and reviewing thousands of customers’ architectures on AWS, AWS has identified best practices and core strategies for architecting systems in the cloud. 
 
+* The framework is based on 5 pillars(mnemonic: CROPS):
+- Cost Optimization
+- Reliability 
+- Operational Excellence
+- Performance Efficiency
+- Security
+
+
+# (C)ost Optimization
+* The ability to run systems to deliver business value at the lower price point.
+
+# (R)eliability 
+* The ability to use systems to recover from infrastructure or service disruptions, dynamically acquire computing resources to meet demand, and mitigate disruptions such as misconfigurations or transient network issues. 
+	
+# (O)perational Excellence
+* The ability to run and monitor systems to deliver business value and to continually improve supporting processes and procedures
+	
+		
+# (P)erformance Efficiency 
+* The ability to use computing resources efficiently to meet system requirements, and to maintain that efficiency as demand changes and technologies evolve. 
+
+# (S)ecurity
+* The ability to protect information, systems, and assets while delivering business value through risk assessments and mitigation strategies.
+}
