# AWS Elastic Load Balancer Service{

--- a/3. AWS Core Services- Part2.md
+++ b/3. AWS Core Services- Part2.md
@@ -12,3 +12,28 @@
 }
 
 
+# AWS Elastic Load Balancer Service{
+
+* Quick Understanding: 
+    - Distributes requests to underlying EC2 Instances.
+    - The Elastic Load Balancer is a managed service
+    - There are different types of Load Balancers in aws
+
+* How it works / A User Case
+	
+    - Lets say you have an  ecommerce application with a lot of traffic coming due to a sale promotion. 
+
+    - Your EC2 is running at 80% of 4CPU  making your page run slower for clients losing sales. 
+
+    - To combat this you COULD change to a higher instance type of 8 CPU BUT that could cause software problems. 
+
+    - What the Elastic Load Balancer does is it creates multiple of an EC2 instance and split users between the two for a single Web Application. 
+
+WEB--------------------------------APPLICATION----------------------DEPLOYED
+
+	                        |  Elastic  ||========= EC2 (50 USERS)		
+        100 USER’S    ======|  Load      |
+		                    |  Balancer ||========= EC2 (50 USERS)		
+
+WEB--------------------------------APPLICATION----------------------DEPLOYED
+	}
