--- a/3. AWS Core Services- Part2.md
+++ b/3. AWS Core Services- Part2.md
@@ -37,3 +37,40 @@ WEB--------------------------------APPLICATION----------------------DEPLOYED
 
 WEB--------------------------------APPLICATION----------------------DEPLOYED
 	}
+
+
+
+
+
+# Route 53{
+
+* Quick Understanding
+    - Register domain names.
+    - Route traffic to resources hosted in AWS.
+    - check the health of your resources.
+
+* How it works / Use Case
+
+    - Routes a .com .org ect domain through to an EC2 hosted website
+
+    - Step : Create a hosted zone - website.com  (you can buy externally)
+
+    - Step 2: Register the Name Server in the domain registrar
+
+    - Step 3: Create a resources record in hosted zone 
+
+WEB---APPLICATION----DEPLOYED-------------------- LINK -------USER/CLINET
+
+    Web Application/ EC2 Instance ====== ROUTE 53 ========>  website.com  => Users
+
+WEB---APPLICATION----DEPLOYED-------------------- LINK -------USER/CLINET
+
+
+* Routing Policies
+
+	- Simple Routing Policy: Used for a single resources
+	- Failover Routing Policy: Used for active passive failover
+	- Geolocation Routing Policy: Route traffic based on location to users 
+	- Weighted Routing Policy: Route traffic to different resources based on weightage.
+	- Latency Routing Policy:  Route traffic to the region that provides the best latency
+}
