--- a/3. AWS Core Services- Part2.md
+++ b/3. AWS Core Services- Part2.md
@@ -73,4 +73,10 @@ WEB---APPLICATION----DEPLOYED-------------------- LINK -------USER/CLINET
 	- Geolocation Routing Policy: Route traffic based on location to users 
 	- Weighted Routing Policy: Route traffic to different resources based on weightage.
 	- Latency Routing Policy:  Route traffic to the region that provides the best latency
+
+
+*   Helpful things to know
+    
+    - In AWS Route 53 you can purchase your own domain name but It’ll probably cost more than if you bought one from an external provider, I use namecheap.com
+
 }
