--- a/3. AWS Core Services- Part2.md
+++ b/3. AWS Core Services- Part2.md
@@ -79,3 +79,33 @@ WEB---APPLICATION----DEPLOYED-------------------- LINK -------USER/CLINET
     - In AWS Route 53 you can purchase your own domain name but It’ll probably cost more than if you bought one from an external provider, I use namecheap.com
 
 }
+
+
+
+# AWS Cloudfront {
+
+* A quick understanding 
+	- Used for effective distribution of your content to users across the world
+	- Distributes content with the help of edge locations.
+	- Users receive content from the closets edge location. 
+
+* Example / Use case
+
+	|EC2 INSTANCE	| user in ohio region =>
+	|WEB APPLICATION   | ========= User in Canada Region>
+    |Deployed in Ohio Region|============================================user in europe>
+
+    - When users use your application across the world in let's say Europe there will be reduced response time. That's what Edge Location is for  if your users want to access information from the EC2 when AWS Cloudfront is set up it will route that user to information stored in the closest Edge Location drastically reducing their response lag due to distance.
+
+    |EC2 INSTANCE	| user in ohio region =>
+	|WEB APPLICATION   |  User in Canada Region=>
+    |AWS Cloudfront deploy |user in europe=>
+
+* Process
+	- A user tries to access a web page in your application
+	- The request is routed to the nearest edge location
+	- If the web content is in the cache of the edge location, it is sent to the user.
+    - If the web content is not present (if this is the first user to access your website in that area), the edge server will make a request to the origin ( your EC2).
+    - As soon as the first byte is received by the edge server, it starts seedning data to the user.
+    - The data is then cached for future and future use ( cutting down on latency for users)
+} 
