# AWS Relational Database System (RDS) {

--- a/3. AWS Core Services- Part2.md
+++ b/3. AWS Core Services- Part2.md
@@ -109,3 +109,8 @@ WEB---APPLICATION----DEPLOYED-------------------- LINK -------USER/CLINET
     - As soon as the first byte is received by the edge server, it starts seedning data to the user.
     - The data is then cached for future and future use ( cutting down on latency for users)
 } 
+
+
+# AWS Relational Database System (RDS) {
+
+}
