# AWS Relational Database System (RDS) {

--- a/3. AWS Core Services- Part2.md
+++ b/3. AWS Core Services- Part2.md
@@ -113,4 +113,21 @@ WEB---APPLICATION----DEPLOYED-------------------- LINK -------USER/CLINET
 
 # AWS Relational Database System (RDS) {
 
+* Quick Understanding 
+	- Service that allows you to set up a relational database in AWS.
+	- Has support for MySQL, Oracle, MariaDB, PostgreSQL, and Microsoft SQL server. 
+	- A lot of administration jobs are managed by AWS themselves.
+		
+	* Features 
+		- You can scale the underlying instance hosting the database at any point if needed.
+		- Monitoring aspects are in place through AWS Cloud Watch.
+		- You can enable automated backups.
+		- You can also create snapshots nnof your database at any point 
+
+		* Enable High availability of your database by using the Multi-AZ feature.
+		
+		|Primary database   |				                                 | Second database|
+		|   in only	one     | ===========auto updates, if Primary fails ====>| in	another  	|
+        | availability zone	|				                                 | availability zone|
+
 }
