# AWS Dynamo DB{

--- a/3. AWS Core Services- Part2.md
+++ b/3. AWS Core Services- Part2.md
@@ -131,3 +131,6 @@ WEB---APPLICATION----DEPLOYED-------------------- LINK -------USER/CLINET
         | availability zone	|				                                 | availability zone|
 
 }
+
+
+# AWS Dynamo DB{
