# AWS Dynamo DB{

--- a/3. AWS Core Services- Part2.md
+++ b/3. AWS Core Services- Part2.md
@@ -133,4 +133,19 @@ WEB---APPLICATION----DEPLOYED-------------------- LINK -------USER/CLINET
 }
 
 
-# AWS Dynamo DB{
+# AWS DynamoDB{
+* Quick Understanding
+
+* If you are going to perform complex queries on data do not use Dynamo DB
+
+	- Fully managed NoSQL database.
+	- Provides better performance and better scalability.
+	-You don't need to manage infrastructure.
+	- In DynamoDB, you directly start working with tables.
+	- Storage will automatically scale
+	- Each item is a collection of tables
+
+
+	- Read and Write Throughput
+    - This is primarily used to decide on the cost aspect for the table, here storage is not prime cost variable.
+}
