# AWS Dynamo DB{

--- a/3. AWS Core Services- Part2.md
+++ b/3. AWS Core Services- Part2.md
@@ -142,10 +142,10 @@ WEB---APPLICATION----DEPLOYED-------------------- LINK -------USER/CLINET
 	- Provides better performance and better scalability.
 	-You don't need to manage infrastructure.
 	- In DynamoDB, you directly start working with tables.
-	- Storage will automatically scale
-	- Each item is a collection of tables
+	- Storage will automatically scale.
+	- Each item is a collection of tables.
 
 
-	- Read and Write Throughput
-    - This is primarily used to decide on the cost aspect for the table, here storage is not prime cost variable.
+	- Read and Write Throughput,
+    - this is primarily used to decide on the cost aspect for the table, here storage is not prime cost variable.
 }
