# AWS R.D.S VS AWS DynamoDB

--- a/3. AWS Core Services- Part2.md
+++ b/3. AWS Core Services- Part2.md
@@ -136,7 +136,12 @@ WEB---APPLICATION----DEPLOYED-------------------- LINK -------USER/CLINET
 # AWS DynamoDB{
 * Quick Understanding
 
+*	INFOMATIVE LINK
+https://medium.com/better-programming/5-real-life-use-cases-for-dynamodb-a152a9d152e2
+
 * If you are going to perform complex queries on data do not use Dynamo DB
+
+* When not to use DynamoDB: When multi-item or cross table transactions are required. When complex queries and joins are required. When real-time analytics on historic data is required.
 
 	- Fully managed NoSQL database.
 	- Provides better performance and better scalability.
@@ -148,4 +153,11 @@ WEB---APPLICATION----DEPLOYED-------------------- LINK -------USER/CLINET
 
 	- Read and Write Throughput,
     - this is primarily used to decide on the cost aspect for the table, here storage is not prime cost variable.
+}
+
+
+# AWS R.D.S VS AWS DynamoDB
+
+LINK {
+https://stackshare.io/stackups/amazon-dynamodb-vs-amazon-rds-for-postgresql#:~:text=With%20DynamoDB%2C%20you%20can%20offload,deployments%20in%20the%20cloud*%22.
 }
