--- a/4. AWS Core Services- Part3.md
+++ b/4. AWS Core Services- Part3.md
@@ -13,3 +13,24 @@
 * Other
 
 }
+
+
+# AWS Lambda {
+
+* A quick understanding 
+	- Serverless compute service available through AWS
+	- Here you don’t need to maintain the infrastructure
+	- Supports a host of programming languages such as Node.js, Python, Ruby, Java, Go, .Net
+	- Can only run a site for a max size of 3gb and for a max time of 15 minutes
+
+* A Deeper Understanding
+	- Its like an ec2 instance yes you can host code just like an EC2 instance
+	- On an EC2 instance your code is posted and stays and you pay for it actively
+	- The other option is to deploy on AWS Lambda 
+	- AWS Lambda manages most things for you like security of your website
+	- You can pause it and start it and aws will only charge you when you start it
+
+* What to consider
+	- This service is completely managed for you so you won't have access to security which can be bad for some use cases
+	- The maximum amount of memory is 3gb and the site can only run for 15 minutes 
+}
