--- a/4. AWS Core Services- Part3/4.1 AWS-Lambda.md
+++ b/4. AWS Core Services- Part3/4.1 AWS-Lambda.md
@@ -17,3 +17,7 @@
 	- This service is completely managed for you so you won't have access to security which can be bad for some use cases
 	- The maximum amount of memory is 3gb and the site can only run for 15 minutes 
 }
+
+AWS LAMBDA LINKS:
+
+https://aws.amazon.com/lambda/features/#:~:text=AWS%20Lambda%20is%20a%20serverless,scale%2C%20performance%2C%20and%20security.
