--- a/3. AWS Core Services- Part2/3. AWS Core Services- Part2.md
+++ b/3. AWS Core Services- Part2/3. AWS Core Services- Part2.md
@@ -136,8 +136,10 @@ WEB---APPLICATION----DEPLOYED-------------------- LINK -------USER/CLINET
 # AWS DynamoDB{
 * Quick Understanding
 
-*	INFOMATIVE LINK
+*	INFOMATIVE LINKs
 https://medium.com/better-programming/5-real-life-use-cases-for-dynamodb-a152a9d152e2
+https://stackshare.io/stackups/amazon-dynamodb-vs-amazon-rds-for-postgresql#:~:text=With%20DynamoDB%2C%20you%20can%20offload,deployments%20in%20the%20cloud*%22.
+
 
 * If you are going to perform complex queries on data do not use Dynamo DB
 
@@ -156,8 +158,3 @@ https://medium.com/better-programming/5-real-life-use-cases-for-dynamodb-a152a9d
 }
 
 
-# AWS R.D.S VS AWS DynamoDB
-
-LINK {
-https://stackshare.io/stackups/amazon-dynamodb-vs-amazon-rds-for-postgresql#:~:text=With%20DynamoDB%2C%20you%20can%20offload,deployments%20in%20the%20cloud*%22.
-}
