--- a/3. AWS Core Services- Part2/3. AWS Core Services- Part2.md
+++ b/3. AWS Core Services- Part2/3. AWS Core Services- Part2.md
@@ -159,5 +159,15 @@ https://stackshare.io/stackups/amazon-dynamodb-vs-amazon-rds-for-postgresql#:~:t
 
 
 # AWS Cloudformation {
-	
+*A quick understanding 
+	-Allows you to spin up infrastructure in AWS via templates
+	-Good way to control your infrastructure via code
+	-Helps with organization of AWS tools 
+
+*How it works
+	EC2 Instance ========{
+	Load Balancer========{ Template} ===> Cloudformation ===> Stack “of applications with rules”
+	Auto Scaling Group=={
+Link:
+https://www.youtube.com/watch?v=0Sh9OySCyb4
 }
