--- a/4. AWS Core Services- Part3/4. AWS Core Services- Part3.md
+++ b/4. AWS Core Services- Part3/4. AWS Core Services- Part3.md
@@ -59,5 +59,5 @@ https://aws.amazon.com/lambda/features/#:~:text=AWS%20Lambda%20is%20a%20serverle
 
 * What to consider
 	- This service is completely managed for you so you won't have access to security which can be bad for some use cases
-	- The maximum amount of memory is 3gb and the site can only run for 15 minutes 
+	- The maximum amount of memory is 3gb and the site can only run for 15 minutes.
 }
